--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "documatic",
-  "version": "1.0.0",
+  "version": "1.1.1",
   "description": "A To-Do app with auto-updating documentation.",
   "main": "src/app.js",
   "scripts": {
@@ -20,6 +20,7 @@
       "@semantic-release/commit-analyzer",
       "@semantic-release/release-notes-generator",
       "@semantic-release/changelog",
+      "@semantic-release/npm",
       [
         "@semantic-release/exec",
         {
@@ -31,9 +32,7 @@
         {
           "assets": [
             "docs",
-            "CHANGELOG.md",
-            "package.json",
-            "package-lock.json"
+            "CHANGELOG.md"
           ],
           "message": "chore(release): ${nextRelease.version} [skip ci]\n\n${nextRelease.notes}"
         }
@@ -46,13 +45,13 @@
     "@semantic-release/commit-analyzer": "^12.0.0",
     "@semantic-release/exec": "^6.0.3",
     "@semantic-release/git": "^10.0.1",
+    "@semantic-release/npm": "^12.0.1",
     "@semantic-release/release-notes-generator": "^13.0.0",
     "fs-extra": "^11.2.0",
     "playwright": "^1.44.1",
     "semantic-release": "^23.1.1"
   },
   "dependencies": {
-    "express": "^4.19.2",
-    "fs-extra": "^11.3.0"
+    "express": "^4.19.2"
   }
 }
