--- a/package.json
+++ b/package.json
@@ -57,6 +57,7 @@
     "semantic-release": "^23.1.1"
   },
   "dependencies": {
-    "express": "^4.19.2"
+    "express": "^4.19.2",
+    "openai": "^5.7.0"
   }
 }
